--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ejemplo 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
 
 </head>
 
 
 <div class="container-fluid mt-3" id="app">
-    <input type="text" class="form-control" v-model="criterioDeBusqueda"
-        placeholder="Ingresar un criterio de busqueda...">
+    <input type="text" class="form-control" v-model="nameCriteria" placeholder="Ingresar nombre y/o apellido...">
     <br>
+    <input type="text" class="form-control" v-model="documentCriteria" placeholder="Ingresar DNI...">
+    <br>
+    <div class="alert alert-warning" role="alert" v-if="minLength">
+        Ingresar 3 caracteres como mínimo en alguno de los criterios
+    </div>
     <div class="card-deck m-0">
         <div class="row">
             <div class="col" v-for="persona in personasFiltradas">
@@ -36,11 +40,12 @@
 </html>
 
 <script>
+    const minLength = 3;
     new Vue({
         el: '#app',
         data: {
-            criterioDeBusqueda: '',
-            //Aquí, en este array es donde tienen que agregar su información
+            nameCriteria: '',
+            documentCriteria: '',
             personas: [
                 {
                     nombre: "Daniel",
@@ -334,16 +339,26 @@
         },
         computed: {
             personasFiltradas() {
-                return this.personas.filter((persona) => {
-                    let registroCompleto = `${persona.nombre} ${persona.apellido} ${persona.dni} ${persona.correo}`
-                    return registroCompleto.toLowerCase().includes(this.criterioDeBusqueda.toLowerCase())
-                });
+                let people = this.personas;
+
+                if (minLength <= this.nameCriteria.length) {
+                    people = people.filter(p => this.getNombreCompleto(p).toLowerCase().includes(this.nameCriteria.toLowerCase()));
+                }
+
+                if (minLength <= this.documentCriteria.length) {
+                    people = people.filter(p => p.dni.includes(this.documentCriteria.toLowerCase()));
+                }
+
+                return people;
+            },
+            minLength() {
+                return this.nameCriteria.length < minLength && this.documentCriteria.length < minLength;
             }
         },
         methods: {
             getNombreCompleto(persona) {
-                return `${persona.nombre} ${persona.apellido}`
-            }
+                return `${persona.nombre} ${persona.apellido}`;
+            },
         }
     });
 </script>
